--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: Production
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
