--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Bump Version Package Json
         uses: ramonpaolo/bump-version@v2.3.1
         with:
-          tag: $GITHUB_REF
+          tag: "$GITHUB_REF"
           commit: true
 
       - uses: actions/setup-node@v3
