--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc"
   },
-  "keywords": [],
+  "keywords": ["discord", "webhook", "webhooks"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -15,5 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0"
-  }
+  },
+  "repository": "github:maycon-jesus/discord-webhook-util",
+  "homepage": "https://docs.mayconjesus.dev/discord-webhook-util/"
 }
